metabase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-deployment
  namespace: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
      - name: metabase-container
        image: metabase/metabase:v0.61.x
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
