metabase/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  namespace: metabase
spec:
  rules:
  - host: mymetabase.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metabase-nodeport
            port:
              number: 80
